Fix Visit Demo's Link

--- a/demo/get-url-variables/search.html
+++ b/demo/get-url-variables/search.html
@@ -18,6 +18,8 @@
       <li>First Name: <span id="firstname"></span></li>
       <li>Last Name: <span id="lastname"></span></li>
     </ul>
+
+    <p>Visit <a href="https://jscenter.github.io/vanilla-js-snippets/">Homepage</a>.</p>
   </div>
 
   <!-- Ref: http://tholman.com/github-corners/ -->
