--- a/demo/get-url-variables/index.html
+++ b/demo/get-url-variables/index.html
@@ -26,6 +26,7 @@
     </form>
 
     <p>If you click the "Submit" button, the form-data will be sent to a page called "/search.html".</p>
+    <p>Visit <a href="https://jscenter.github.io/vanilla-js-snippets/">Homepage</a>.</p>
   </div>
 
   <!-- Ref: http://tholman.com/github-corners/ -->
