--- a/demo/ipv4-decimal-conversion/index.html
+++ b/demo/ipv4-decimal-conversion/index.html
@@ -24,6 +24,8 @@
     <input type="number" placeholder="Enter an IP Decimal..." id="inp-decimal" />
     <button class="muted-button" id="btn-decimal">Convert</button>
     <p class="alert alert-danger hide" id="alert-decimal">Please provide a valid IP Decimal!</p>
+
+    <p>Visit <a href="https://jscenter.github.io/vanilla-js-snippets/">Homepage</a>.</p>
   </div>
 
   <!-- Ref: http://tholman.com/github-corners/ -->
