--- a/demo/get-url-variables/search.html
+++ b/demo/get-url-variables/search.html
@@ -19,7 +19,7 @@
       <li>Last Name: <span id="lastname"></span></li>
     </ul>
 
-    <p>Visit <a href="https://jscenter.github.io/vanilla-js-snippets/">Homepage</a>.</p>
+    <p class="margin-top">Visit <a href="https://jscenter.github.io/vanilla-js-snippets/">Homepage</a>.</p>
   </div>
 
   <!-- Ref: http://tholman.com/github-corners/ -->
