--- a/demo/ipv4-decimal-conversion/index.html
+++ b/demo/ipv4-decimal-conversion/index.html
@@ -25,7 +25,7 @@
     <button class="muted-button" id="btn-decimal">Convert</button>
     <p class="alert alert-danger hide" id="alert-decimal">Please provide a valid IP Decimal!</p>
 
-    <p>Visit <a href="https://jscenter.github.io/vanilla-js-snippets/">Homepage</a>.</p>
+    <p class="margin-top">Visit <a href="https://jscenter.github.io/vanilla-js-snippets/">Homepage</a>.</p>
   </div>
 
   <!-- Ref: http://tholman.com/github-corners/ -->
